fix z-index

--- a/src/sass/_objects.backtotop.scss
+++ b/src/sass/_objects.backtotop.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	bottom: $divider;
 	right: $divider*2;
-	z-index: 999;
+	z-index: 2;
 
 	width: 30px;
 	height: 30px;
